# rss-parser-project-ru

./: .env.example  Dockerfile  README.md  api.py  config.py  database.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  telegram.py  test_parser.py
.github/workflows/: ci-cd.yml
rss_parser/: api.py  config.py  database.py  main.py  parser.py  telegram.py
web/: Dockerfile.web  index.html
