[tool.poetry]
name = "rss_parser"
version = "0.1.0"
description = "A professional RSS feed parser"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
feedparser = "^6.0.11"
nltk = "^3.8.1"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
prometheus-client = "^0.20.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
asyncio = "^3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"